[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memorch"
version = "0.2.0"
description = "Memory architecture evaluation framework for LLM tool-use experiments"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "flagembedding>=1.3.5",
    "jsonlines>=4.0.0",
    "litellm>=1.80.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "tiktoken>=0.5.0",
    "urllib3>=2.5.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memorch"]
