[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memorch"
version = "0.2.1"
description = "Memory architecture evaluation framework for LLM tool-use experiments"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0"
dependencies = [
    "flagembedding>=1.3.5",
    "jsonlines>=4.0.0",
    "litellm>=1.80.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.4",
    "tiktoken>=0.5.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memorch"]

[tool.uv.sources]
# provides fix for transformers v5 issue.
flagembedding = { git = "https://github.com/FlagOpen/FlagEmbedding.git", rev = "master" }
